--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -13,5 +13,6 @@
 	"MEAN Framework": "MEAN Framework",
 	"Read Docs": "Read Docs",
 	"Components": "Components",
-	"Login": "Login"
+	"Login": "Login",
+	"Una hackathon para programadores ": "Una hackathon para programadores "
 }
