--- a/locales/en-us.json
+++ b/locales/en-us.json
@@ -14,5 +14,6 @@
 	"Read Docs": "Read Docs",
 	"Components": "Components",
 	"Login": "Login",
-	"Una hackathon para programadores ": "Una hackathon para programadores "
+	"Una hackathon para developers ": "A hackathon for developers with ",
+	"con espíritu emprendedor": "entrepreneurial spirit"
 }
