--- a/locales/es-ar.json
+++ b/locales/es-ar.json
@@ -15,5 +15,8 @@
 	"en-us": "en-us",
 	"es-ar": "es-ar",
 	"More": "More",
-	"Login": "Login"
+	"Login": "Login",
+	"Una hackathon para programadores ": "Una hackathon para programadores ",
+	"Una hackathon para developers ": "Una hackathon para developers ",
+	"con espíritu emprendedor": "con espíritu emprendedor"
 }
